# DRF-hw

./: .env.sample  .gitignore  Dockerfile  README.md  coverage.txt  docker-compose.yml  logs.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py
nginx/: nginx.conf
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: add_payments.py  create_groups.py  create_user.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_paying.py  0004_paying_paid_course_paying_paid_lesson.py  0005_alter_user_managers.py
