[tool.poetry]
name = "drf-hw"
version = "0.1.0"
description = ""
authors = ["polinakigim <polinakigim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.7"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"
isort = "^6.0.1"
black = "^25.1.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
coverage = "^7.8.0"
drf-yasg = "^1.21.10"
stripe = "^12.0.0"
celery = "^5.5.1"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"
flake8 = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
